# PR-comfyUI-tool-2lab-68364bd6

./: README.md  __init__.py  properties_template.json  pyproject.toml
js/: 2lab.js
nodes/: constants.py
nodes/api/: azure_gpt.py  baidu_translator.py  chatglm_gpt.py  llm.py  openai_gpt.py  youdao_ai.py
nodes/common/: fields.py  sizes.py
nodes/direct/: azure_gpt.py  baidu_translator.py  chatglm_gpt.py  openai_gpt.py  youdao_ai.py
nodes/workflow2Api/: apiNodes.py
